# perennis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: design.md
include/perennis/: perennis.hpp
tests/: CMakeLists.txt  ggml_smoke_test.cpp
